Merge remote-tracking branch 'origin/sprint_7-solution-in-file-manager' into sprint_7-solution-in-file-manager