@@ -8,37 +8,42 @@ import tracker.model.Task;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import tracker.status.Status;
+import tracker.status.TaskType;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ManagersTest {
 
-    public HistoryManager historyManager;
+    private TaskManager taskManager;
+    private HistoryManager historyManager;
 
     @BeforeEach
     void setUp() {
         historyManager = new InMemoryHistoryManagerImpl();
+        taskManager = new InMemoryTaskManagerImpl(historyManager);
     }
 
     // Тестирование добавления подзадачи к эпикам
     @Test
     void testEpicCannotAddItselfAsSubtask() {
-        Epic epic = new Epic("Epic 1", "Epic description");
-        epic.setId(1);
-        Subtask subtask = new Subtask("Subtask 1", "Subtask description", Status.NEW, epic.getId(), Duration.ofMinutes(20), LocalDateTime.now());
+        Epic epic = new Epic(1, "Epic 1", "Epic description", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now());
+        Subtask subtask = new Subtask(1, "Subtask 1", "Subtask description", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now(), epic.getId());
 
         List<Subtask> subtasks = new ArrayList<>();
         subtasks.add(subtask);
 
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> epic.setSubtasks(subtasks));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
+            epic.setSubtasks(subtasks);
+        });
 
-        assertEquals("Эпик не может добавлять себя же в качестве подзадачи.", exception.getMessage());
+        assertEquals("Эпик не может добавлять себя в качестве подзадачи.", exception.getMessage());
     }
 
     // Тестирование создания экземпляров менеджера задач
@@ -65,63 +70,70 @@ public class ManagersTest {
     @Test
     void testInMemoryTaskManagerAddDifferentTasks() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Task task = new Task("Task 1", "Description 1", Status.NEW, Duration.ofMinutes(30), LocalDateTime.now());
+        Task task = new Task(1, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
         int taskId = manager.createTask(task);
-        Optional<Task> retrievedTask = manager.getTaskById(taskId);
-        assertTrue(retrievedTask.isPresent());
-        assertEquals(task, retrievedTask.get());
+        assertEquals(task, manager.getTaskById(taskId));
 
-        Epic epic = new Epic("Epic 1", "Description 1");
+        Epic epic = new Epic(2, "Epic 1", "Description 1", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now());
         int epicId = manager.createEpic(epic);
-        Optional<Epic> retrievedEpic = manager.getEpicById(epicId);
-        assertTrue(retrievedEpic.isPresent());
-        assertEquals(epic, retrievedEpic.get());
+        assertEquals(epic, manager.getEpicById(epicId));
 
-        Subtask subtask = new Subtask("Subtask 1", "Description 1", Status.NEW, epicId, Duration.ofMinutes(20), LocalDateTime.now());
+        Subtask subtask = new Subtask(3, "Subtask 1", "Description 1", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now().plusHours(2), epicId);
         int subtaskId = manager.createSubtask(subtask);
-        Optional<Subtask> retrievedSubtask = manager.getSubtaskById(subtaskId);
-        assertTrue(retrievedSubtask.isPresent());
-        assertEquals(subtask, retrievedSubtask.get());
+        assertEquals(subtask, manager.getSubtaskById(subtaskId));
     }
 
     // Тестирование конфликта ID задач
     @Test
     void testTaskIdConflict() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Task task1 = new Task("Task 1", "Description 1", Status.NEW, Duration.ofMinutes(30), LocalDateTime.now());
+
+        Task task1 = new Task(0, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
         int taskId1 = manager.createTask(task1);
-        Task task2 = new Task("Task 2", "Description 2", Status.NEW, Duration.ofMinutes(45), LocalDateTime.now());
-        int taskId2 = manager.createTask(task2);
-        assertNotEquals(taskId1, taskId2);
+
+        Task task2 = new Task(taskId1, "Task 2", "Description 2", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
+
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            manager.createTask(task2);
+        });
+
+        assertEquals("Задачи с одинаковым id не должны добавляться.", exception.getMessage());
     }
+
 
     // Тестирование удаления подзадачи и обновления связанного эпика
     @Test
-    void testDeleteSubtaskUpdatesEpic() {
-        InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Epic epic = new Epic("Epic 1", "Description 1");
-        int epicId = manager.createEpic(epic);
-        Subtask subtask1 = new Subtask("Subtask 1", "Description 1", Status.NEW, epicId, Duration.ofMinutes(20), LocalDateTime.now());
-        int subtaskId1 = manager.createSubtask(subtask1);
-        Subtask subtask2 = new Subtask("Subtask 2", "Description 2", Status.NEW, epicId, Duration.ofMinutes(25), LocalDateTime.now());
-        int subtaskId2 = manager.createSubtask(subtask2);
+    void testAddConflictingSubtask() {
+        Epic epic = new Epic(1, "Epic 1", "Description 1", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now());        Subtask subtask1 = new Subtask(1, "Subtask 1", "Description 1", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now(), epic.getId());
+        epic.addSubtask(subtask1);
 
-        // Удаляем подзадачу и проверяем, что эпик обновился
-        manager.removeSubtaskById(subtaskId1);
-        manager.removeSubtaskById(subtaskId2);
-        Optional<Epic> updatedEpic = manager.getEpicById(epicId);
-        assertTrue(updatedEpic.isPresent(), "Эпик должен существовать после удаления подзадач.");
-        assertEquals(0, updatedEpic.get().getSubtasks().size(), "Проверяем, что подзадач больше нет.");
+        Subtask subtask2 = new Subtask(2, "Subtask 2", "Description 2", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now(), epic.getId());
+
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            epic.addSubtask(subtask2);
+        });
+
+        assertEquals("Подзадача пересекается с существующей подзадачей.", exception.getMessage());
     }
 
     // Тестирование целостности данных после удаления подзадачи
     @Test
     void testEpicDoesNotContainOldSubtaskIds() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Epic epic = new Epic("Epic 1", "Description for epic");
+        Epic epic = new Epic(1, "Epic 1", "Description for epic", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now());
         manager.createEpic(epic);
         int epicId = epic.getId();
-        Subtask subtask = new Subtask("Subtask 1", "Subtask Description", Status.NEW, epicId, Duration.ofMinutes(20), LocalDateTime.now());
+        Subtask subtask = new Subtask(2, "Subtask 1", "Subtask Description", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now(), epicId);
         int subtaskId = manager.createSubtask(subtask);
         manager.removeSubtaskById(subtaskId);
     }
@@ -130,24 +142,23 @@ public class ManagersTest {
     @Test
     void testUpdateTaskStatus() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Task task = new Task("Task 1", "Description 1", Status.NEW, Duration.ofMinutes(30), LocalDateTime.now());
+        Task task = new Task(1, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
         int taskId = manager.createTask(task);
 
-        // Обновляем статус задачи
         task.setStatus(Status.DONE);
         manager.updateTask(task);
 
-        // Получаем задачу по ID и проверяем статус
-        Optional<Task> updatedTask = manager.getTaskById(taskId);
-        assertTrue(updatedTask.isPresent(), "Задача должна быть найдена в менеджере.");
-        assertEquals(Status.DONE, updatedTask.get().getStatus(), "Статус задачи должен обновиться в менеджере.");
+        assertEquals(Status.DONE, manager.getTaskById(taskId).getStatus(),
+                "Статус задачи должен обновиться в менеджере.");
     }
 
     // Тестирование сохранения истории задач
     @Test
     void testHistoryManagerPreservesPreviousVersion() {
         InMemoryHistoryManagerImpl historyManager = new InMemoryHistoryManagerImpl();
-        Task task = new Task("Task 1", "Description 1", Status.NEW, Duration.ofMinutes(30), LocalDateTime.now());
+        Task task = new Task(1, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
         historyManager.add(task);
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
@@ -156,50 +167,64 @@ public class ManagersTest {
         historyManager.add(task);
         history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(Status.DONE, history.getFirst().getStatus());
+        assertEquals(Status.DONE, history.get(0).getStatus());
     }
 
     // Тестирование изменения ID эпика подзадачи
     @Test
     void testUpdateSubtaskChangesEpicSubtaskIds() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Epic epic = new Epic("Epic 1", "Description for Epic 1");
+        Epic epic = new Epic(1, "Epic 1", "Description for Epic 1", Status.NEW,
+                Duration.ofHours(1), LocalDateTime.now());
         int epicId = manager.createEpic(epic);
 
-        Subtask subtask = new Subtask("Subtask 1",
-                "Description for Subtask 1", Status.NEW, epicId, Duration.ofMinutes(20), LocalDateTime.now());
-        int subtaskId = manager.createSubtask(subtask);
+        Subtask subtask = new Subtask(1, "Subtask 1", "Description for Subtask 1",
+                Status.NEW, Duration.ofHours(1), LocalDateTime.now(), epicId);
+        manager.createSubtask(subtask);
         epic.addSubtask(subtask);
 
-        assertTrue(epic.getSubtasks().contains(subtask), "Эпик должен содержать подзадачу.");
+        Subtask conflictingSubtask = new Subtask(2, "Subtask 2", "Description for Subtask 2",
+                Status.NEW, Duration.ofHours(1), LocalDateTime.now(), epicId);
 
-        Subtask newSubtask = new Subtask("Subtask 1 Updated",
-                "Description for Subtask 1 Updated", Status.NEW, epicId, Duration.ofMinutes(20), LocalDateTime.now());
-        int newSubtaskId = manager.createSubtask(newSubtask);
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            manager.createSubtask(conflictingSubtask);
+        });
 
-        epic.removeSubtask(subtaskId);
-        epic.addSubtask(newSubtask);
-
-        assertFalse(epic.getSubtasks().contains(subtask), "Эпик не должен содержать старую подзадачу.");
-        assertTrue(epic.getSubtasks().contains(newSubtask), "Эпик должен содержать новую подзадачу.");
-        assertEquals(newSubtaskId, newSubtask.getId(), "ID новой подзадачи должен соответствовать ожидаемому.");
+        assertEquals("Подзадача пересекается с существующей подзадачей.", exception.getMessage());
     }
 
     // Тестирование целостности данных при обновлении задачи
     @Test
     void testSettersDoNotAffectManagerData() {
         InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl(new InMemoryHistoryManagerImpl());
-        Task task = new Task("Task 1", "Description 1", Status.NEW, Duration.ofMinutes(30), LocalDateTime.now());
+        Task task = new Task(1, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.now());
         int taskId = manager.createTask(task);
+        Task modifiedTask = new Task(task.getId(), task.getNameTask(), "Modified Description",
+                task.getStatus(), task.getTaskType(), task.getDuration(), task.getStartTime());
 
-        Optional<Task> retrievedTask = manager.getTaskById(taskId);
-
-        // Проверяем, что retrievedTask содержит значение
-        assertTrue(retrievedTask.isPresent(), "Task should be present in the manager");
-
-        // Проверяем, что описание задачи не изменилось
-        assertNotEquals("Modified Description", retrievedTask.get().getDescriptionTask(),
+        Task retrievedTask = manager.getTaskById(taskId);
+        assertNotEquals("Modified Description", retrievedTask.getDescriptionTask(),
                 "Manager data should not be affected by direct changes in task properties");
+    }
+
+    // Тестирование создания задач с пересекающимся временем выполнения
+    @Test
+    public void testCreateTask_OverlappingTasks() {
+        InMemoryTaskManagerImpl manager = new InMemoryTaskManagerImpl();
+
+        Task task1 = new Task(1, "Task 1", "Description 1", Status.NEW, TaskType.TASK,
+                Duration.ofHours(2), LocalDateTime.of(2023, 10, 1, 10, 0));
+        manager.createTask(task1);
+
+        Task task2 = new Task(2, "Task 2", "Description 2", Status.NEW, TaskType.TASK,
+                Duration.ofHours(1), LocalDateTime.of(2023, 10, 1, 11, 0));
+
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            manager.createTask(task2);
+        });
+
+        assertEquals("Задача пересекается с существующей задачей.", exception.getMessage());
     }
 }
 
